--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "async": "^3.2.3",
     "axios": "^0.24.0",
     "debug": "^4.3.3",
+    "immutability-helper": "^3.1.1",
     "linear-gradient": "^1.0.6",
+    "moment": "^2.29.1",
     "prop-types": "^15.8.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-view": "^0.2.0",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1",
     "react-native-table-component": "^1.2.1",
     "react-navigation": "2.17.0",
     "react-navigation-side-tabs": "^0.0.7",
