--- a/ios/OrderingWindow/Info.plist
+++ b/ios/OrderingWindow/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>beyond_the_mountains.otf</string>
+		<string>beyond_the_mountains.ttf</string>
+		<string>HelveticaNeueLTStd-Roman.otf</string>
+		<string>HelveticaNeueLTStdRoman.woff</string>
+	</array>
 </dict>
 </plist>
