--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.30.1",
     "react-native-masked-view": "^0.2.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^1.13.3",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^3.3.2",
